--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <div class="nav-bar flex container">  
-        <a href="#" class="compony-logo" onclick="reload()" > <img src="/News web app/Assets/logo.png" alt="News web App" ></a>
+        <a href="#" class="compony-logo" onclick="reload()" > <img src="Assets/logo.png" alt="News web App" ></a>
         <div class="links">
             <ul class="flex">
                 <li class="hover-link nav-items" id="Genral" onclick="onNavItemClick('Genral')">Genral</li>
